añadiendo principio para esqueleto html

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,68 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<!--head-->
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Data Lovers</title>
+    <!--falta link de bootstrap-->
     <link rel="stylesheet" href="style.css" />
+
   </head>
+
+  <!--body-->
   <body>
-    <div id="root"></div>
+      <div id="root"></div>
+
+    <header>
+      
+             <!--navbar-->
+   
+
+    </header>
+
+
+
+
+    <main>
+
+   
+<!--Página 1-->
+    <!--carrusel-->
+    
+    <article class="article">
+      <h2>Sobre Nosotros</h2>
+      <p></p>
+
+    </article>
+
+    <article class="article">
+      <h2>Datos</h2>
+      <p></p>
+    </article>
+
+    <aside>
+      <h2>Sobre el banco mundial</h2>
+      <p></p>
+      <a target="_blank" href="https://www.bancomundial.org/">Ir a la página del banco mundial</a>
+    </aside>
+
+    <!--Página 2-->
+    <!--Página 3-->
+
+  </main>
+
+
+    <footer class = "footer">
+    </footer>
+
     <script src="./data/worldbank/worldbank.js"></script>
     <script src="data.js"></script>
     <script src="main.js"></script>
-  </body>
+    </body>
 </html>
+
+
+
