--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Data Lovers</title>
+    <link rel="shortcut icon" type="image/x-icon" href="../img/sharing-wb-logo-clear.png">
+    <title>Banco Mundial</title>
     <!--falta link de bootstrap-->
     <link rel="stylesheet" href="style.css" />
 
