añadiendo articles y buttons a mi primera interfaz

--- a/src/index.html
+++ b/src/index.html
@@ -35,20 +35,25 @@
     
     <article class="article">
       <h2>Sobre Nosotros</h2>
-      <p></p>
-
-    </article>
+      <p>Somos una organización sin fines de lucro, que busca socializar de manera 
+        simple y práctica, datos de indicadores de desigualdad socio económica en 
+        Latinoamérica, para fomentar la investigación en miras de mejorar las políticas sociales.</p>
+        <button>Ir a about us</button>
+      </article>
 
     <article class="article">
       <h2>Datos</h2>
-      <p></p>
+      <p>En base a estadísticas entregadas públicamente por el Banco Mundial, entregamos resultados porcentuales 
+      y gráficos de encuestas de los últimos 15 años, aplicadas en México, Chile, Perú y Brasil.</p>
+      <button>Ir a los datos</button>
     </article>
 
-    <aside>
+    <article>
       <h2>Sobre el banco mundial</h2>
-      <p></p>
+      <p>Es una organización multinacional, especializada en finanzas y asistencia. Su objetivo principal, es acabar 
+        con la pobreza extrema en el mundo, mediante créditos, asistencia a más de 100 países en vías de desarrollo</p>
       <a target="_blank" href="https://www.bancomundial.org/">Ir a la página del banco mundial</a>
-    </aside>
+    </article>
 
     <!--Página 2-->
     <!--Página 3-->
