--- a/src/index.html
+++ b/src/index.html
@@ -140,8 +140,8 @@
           </div>
         </div>
             <!--Página 3-->
-            <!-- <div id="page3">
-              <div class="buttons">
+          <div id="page3">
+             <!-- <div class="buttons">
             <button id="">Educación</button>
             <button id="">Empleo</button>
             <button id="">Economicos</button>
